# ovadare

./: .gitignore  README.md  index.html  learn-facts.html  make-impact.html  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  stories.html
css/: style.css  style1.css
examples/: example_integration.py
js/: modernizr.js
ovadare/agents/: agent.py  agent_sdk.py
ovadare/communication/: api_endpoints.py
ovadare/conflicts/: __init__.py  conflict_detector.py  conflict_resolver.py  resolution_engine.py
ovadare/core/: base_classes.py  event_dispatcher.py  framework.py  ioc_container.py
ovadare/escalation/: escalation_manager.py
ovadare/security/: authentication.py  authorization.py
ovadare/tests/: autogen_tests.py  test_agent_sdk.py  test_api_endpoints.py  test_authentication.py  test_authorization.py  test_conflict_detector.py
ovadare/utils/: configuration.py
sites/default/files/: Homepage Video 1.webm  Homepage Video 2.webm  Homepage Video 3.webm  Homepage Video 4.webm  Homepage Video 5 Alt.webm  Homepage Video 5.webm  luxury-cars.webm  luxury-houses.webm  luxury-watches.webm  luxury-yachts.webm  private-helicopters.webm  private-jets.webm  site.webmanifest
sites/default/files/js/: script.js
