[metadata]
name = ovadare
version = 0.1.0
author = Oren Mukades
author_email = ai@ovadare.com
description = A brief description of your project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/ovadare
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    # List your project's runtime dependencies here
    # For example:
    requests>=2.25.1
    numpy>=1.19.5

[options.packages.find]
where = ovadare

[options.extras_require]
dev =
    pytest
    flake8
    black
    isort
    sphinx
